A number of updates to documentation, alire.toml files, and mainly BIOS.

--- a/Docs/sim.bib
+++ b/Docs/sim.bib
@@ -1,13 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
+
+%% Created for Brent Seidel at 2025-01-01 14:17:52 -0700 
 
 
-%% Created for Brent Seidel at 2024-07-22 13:54:26 -0700 
+%% Saved with string encoding Unicode (UTF-8) 
 
 
-%% Saved with string encoding Western (ASCII) 
 
+@webpage{z80undoc,
+	author = {Sean Young and Jan Wilmans},
+	date-added = {2025-01-01 14:01:24 -0700},
+	date-modified = {2025-01-01 14:17:43 -0700},
+	keywords = {Assembly Language},
+	title = {The Undocumented Z80 Documented},
+	url = {http://www.myquest.nl/z80undocumented/},
+	year = {2005}}
 
+@book{z80,
+	author = {Zilog/IXYS},
+	date-added = {2025-01-01 13:58:19 -0700},
+	date-modified = {2025-01-01 14:00:02 -0700},
+	keywords = {Assembly Language},
+	publisher = {Zilog},
+	title = {Z80 CPU User Manual},
+	year = {2016}}
 
 @book{i8080,
 	author = {Intel},
