--- a/Docs/sim.bib
+++ b/Docs/sim.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Brent Seidel at 2025-01-01 14:17:52 -0700 
+%% Created for Brent Seidel at 2025-02-13 15:07:03 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{msc6502,
+	author = {MOS Technology},
+	date-added = {2025-02-13 15:02:53 -0700},
+	date-modified = {2025-02-13 15:06:52 -0700},
+	keywords = {Assembly Language},
+	month = {July},
+	publisher = {MOS Technology},
+	title = {MSC6502 Microcomputer Family Programming Manual},
+	year = {1976}}
 
 @webpage{z80undoc,
 	author = {Sean Young and Jan Wilmans},
@@ -15,7 +25,8 @@
 	keywords = {Assembly Language},
 	title = {The Undocumented Z80 Documented},
 	url = {http://www.myquest.nl/z80undocumented/},
-	year = {2005}}
+	year = {2005},
+	bdsk-url-1 = {http://www.myquest.nl/z80undocumented/}}
 
 @book{z80,
 	author = {Zilog/IXYS},
