--- a/Docs/sim.tex
+++ b/Docs/sim.tex
@@ -76,7 +76,7 @@
   \fancyhead[L]{\docname}%
   \fancyhead[R]{\leftmark}
   \fancyfoot[C]{Page \thepage\ of \pageref{LastPage}}%
-  \fancyfoot[L]{Ada Programming}
+  \fancyfoot[L]{CPU Simulation}
   \renewcommand{\headrulewidth}{0.4pt}%
   \renewcommand{\footrulewidth}{0.4pt}%
 }
@@ -187,17 +187,148 @@ Each simulator is based on an object that derives from the \datatype{simulator} 
 
 The current design has memory included in the simulator instead of being an external device.  Any I/O decoding is also handled inside the simulator.  This means that any reading and writing of memory has to be done via routines defined by the simulator.
 
-\subsection{Data Types}
+\subsection{Numerical Data Types}
 Currently, processors with address and data busses up to 32 bits wide are supported.  For the address bus, use the data type \datatype{addr\_bus}  and for the data bus, use \datatype{data\_bus}.  These are both defined as a 32 bit unsigned integer.  Each simulator may use as many or as few of these bits as are needed.  This means that if (as in most cases) a simulator doesn't define a full 4 GB of memory, the external program can try to read or write non-existent memory.  This will probably cause an exception.
 
-\subsection{Initialization}
-This should be called once at the beginning of the host program to initialize the simulator.  The implementation is up to the simulators and it is possible that some simulators may not need any initialization.
+\subsection{Enumeration Data Types}
+The \datatype{proc\_mode} enumeration is used to indicate the processor mode.  Not all modes will be used be any given processor and the meanings are processor specific.  Any of these modes could be used by a processor that doesn't define multiple modes.  The defined modes are:
+\begin{itemize}
+  \item \constant{PROC\_NONE} - Unspecified processor mode.
+  \item \constant{PROC\_KERN} - Kernel mode.  This is usually the most privileged mode.
+  \item \constant{PROC\_EXEC} - Executive mode.  This is a little less privileged.
+  \item \constant{PROC\_SUP} - Supervisor mode.  This is a little less privileged.
+  \item \constant{PROC\_USER} - User mode.  This is usually the least privileged mode.
+\end{itemize}
+
+The \datatype{addr\_type} enumeration is used to indicate the type of memory access.  They may be used for controlling access to memory.  The defined types are:
+\begin{itemize}
+  \item \constant{ADDR\_NONE} - Unspecified address type.
+  \item \constant{ADDR\_INTR} - Reading interrupt data, typically an interrupt vector.
+  \item \constant{ADDR\_DATA} - Reading or writing data.
+  \item \constant{ADDR\_INS} - Reading instructions (probably not writing).
+  \item \constant{ADDR\_IO} - Reading or writing to I/O ports for processors that have separate I/O addresses.
+\end{itemize}
+
+The \datatype{bus\_type} enumeration defines the type of bus for attaching I/O devices and bus accesses.  This can either be the I/O bus (for processors with separate I/O space) or the memory bus for memory and memory mapped I/O.  The defined busses are:
+\begin{itemize}
+  \item \constant{BUS\_MEMORY} - Use the memory bus.
+  \item \constant{BUS\_IO} - Use the I/O bus
+\end{itemize}
+
+The \datatype{bus\_stat} enumeration is used for reporting the result of a bus transaction.  The defined results are:
+\begin{itemize}
+  \item \constant{BUS\_SUCC} - The transaction succeeded.  This is the result that you hope you get.
+  \item \constant{BUS\_NONE} - Nothing exists at this address.  Either uninstalled memory or non-existent I/O device.
+  \item \constant{BUS\_PROT} - A protection violation occurred.  This is typically reported by a memory management unit when the \datatype{proc\_mode} doesn't match the required level for the address.
+  \item \constant{BUS\_PARITY} - A parity error occurred during the bus transaction.  This would usually be used for testing error handlers.
+  \item \constant{BUS\_ECC1} - A correctable ECC error occurred during the bus transaction.  This would usually be used for testing error handlers.
+  \item \constant{BUS\_ECC2} - An uncorrectable ECC error occurred during the bus transaction.  This would usually be used for testing error handlers
+\end{itemize}
+
+\subsection{The CPU Objects}
+The CPU object is responsible for executing instructions.  Generally before using a simulator, it must be initialized, a variant selected, and a bus attached.  However this is all implementation dependent.
+
+To initialize the CPU, use:
 \begin{lstlisting}
 procedure init(self : in out simulator) is abstract;
 \end{lstlisting}
 \begin{itemize}
   \item \keyword{self} - The simulator object to initialize.
 \end{itemize}
+
+To select a CPU variant, use:
+\begin{lstlisting}
+procedure variant(self : in out simulator; v : Natural) is abstract;
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The simulator object to initialize.
+  \item \keyword{v} - The index of the variant to use.  This value is defined by the specific CPU object.
+\end{itemize}
+
+To attach a bus, use (note that this is declared as null since some CPUs may not need this and thus they won't have to create a null implementation):
+\begin{lstlisting}
+procedure attach_bus(self : in out simulator;
+                     bus : BBS.Sim_CPU.bus.bus_access;
+                     index : Natural) is Null;
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The simulator object to initialize.
+  \item \keyword{bus} - The bus object to attach.
+  \item \keyword{index} - The CPU index.  Expected to be used for future multi-CPU simulations.  Currently unused by all defined bus objects.
+\end{itemize}
+
+\subsection{The Bus Objects}
+This bus object contains the memory for the CPU and interfaces with the I/O devices.  Once the bus object is created, the main action a host program needs to do is to attach I/O devices.
+\begin{lstlisting}
+   procedure attach_io(self : in out bus;
+                       io_dev : BBS.Sim_CPU.io.io_access;
+                       base_addr : addr_bus;
+                       which_bus : bus_type) is abstract;
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The bus object to initialize.
+  \item \keyword{io\_dev} - The I/O device object to attach to the bus.
+  \item \keyword{base\_addr} - The base address to use to access the device registers.
+  \item \keyword{which\_bus} - One of the defined \datatype{bus\_type} values.
+\end{itemize}
+
+The bus object provides routines for accessing memory by physical or logical addresses.  In some cases these will be identical.  When some sort of address translation is provided, such as bank switching or a full MMU, they may be different.  All memory access routines provide a \keyword{status} parameter that contains the \datatype{bus\_state} the status of the operation.  If \keyword{status} is not \constant{BUS\_SUCC}, the operation did not complete and any data returned by a read operation should be ignored.
+
+To read from physical memory, use:
+\begin{lstlisting}
+function readp(self : in out bus; addr : addr_bus; status : out bus_stat)
+               return data_bus is abstract;
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The bus object to access.
+  \item \keyword{addr} - The memory address to read.
+  \item \keyword{status} - the \datatype{bus\_status} result of the operation.
+  \item Returns the value at the specified address.
+\end{itemize}
+
+To write to physical memory, use:
+\begin{lstlisting}
+procedure writep(self : in out bus; addr : addr_bus; data: data_bus;
+                 status : out bus_stat) is abstract;
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The bus object to access.
+  \item \keyword{addr} - The memory address to read.
+  \item \keyword{data} - The value to write to memory.
+  \item \keyword{status} - the \datatype{bus\_status} result of the operation.
+\end{itemize}
+
+To read from logical memory, use:
+\begin{lstlisting}
+function readl(self : in out bus; addr : addr_bus; mode : proc_mode;
+               addr_kind : addr_type; status : out bus_stat)
+               return data_bus is abstract;
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The bus object to access.
+  \item \keyword{addr} - The memory address to read.
+  \item \keyword{mode} - The \datatype{proc\_mode} for the operation.
+  \item \keyword{addr\_kind} - The \datatype{addr\_type} for the operation.
+  \item \keyword{status} - the \datatype{bus\_status} result of the operation.
+  \item Returns the value at the specified address.
+\end{itemize}
+
+To write to logical memory, use:
+\begin{lstlisting}
+procedure writel(self : in out bus; addr : addr_bus; data: data_bus; mode : proc_mode;
+                 addr_kind : addr_type; status : out bus_stat) is abstract;
+\end{lstlisting}
+\begin{itemize}
+  \item \keyword{self} - The bus object to access.
+  \item \keyword{addr} - The memory address to read.
+  \item \keyword{data} - The value to write to memory.
+  \item \keyword{mode} - The \datatype{proc\_mode} for the operation.
+  \item \keyword{addr\_kind} - The \datatype{addr\_type} for the operation.
+  \item \keyword{status} - the \datatype{bus\_status} result of the operation.
+\end{itemize}
+
+\subsection{The I/O Objects}
+I/O objects are used to simulate various I/O devices.
 
 \subsection{Loading Data to Memory}
 The main routines for reading and writing simulator memory are:
